--- a/style/style.css
+++ b/style/style.css
@@ -44,9 +44,9 @@ background-size: contain;
 }
 
 .contenido-alerta {
-  width: 250PX;
-  height: auto;
-  padding-bottom: 20px;
+  width: 60%;
+  height: 300px;
+  padding: 10%;
   border-radius: 12px;
   text-align: center;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
@@ -54,9 +54,11 @@ background-size: contain;
 }
 .michiconfundido{
   width: 100%;
-  height: 200px;
+  height: 50%;
   background-image: url(../assets/ALERT.webp);
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .contenido-alerta p,
 .contenido-alerta button,
@@ -459,7 +461,7 @@ background-color:rgb(240, 196, 1);
 
 }
 .TEXTOQRALERTA{
-  margin: 25PX;
+  margin: 20PX;
 }
 
 /* --------------------------QR DE CARTA------------------------- */
