--- a/style/style.css
+++ b/style/style.css
@@ -105,45 +105,64 @@ background-size: contain;
 
 /*----------------------------BANNER---------------------------------------*/
 
-.banner{
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
+  /*-----------------------------Menu -------------------------------*/
+
+
+.contenedor{
   width: 100%;
   height: 100vh;
-  background-image: url(../assets/wallpapers.webp);
-  background-size: cover;
-  background-position-y: bottom;
-  background-position-x: center;
-  transition: 1s ease;
-}
-.bannermichis{
-  width: 50%;
-  height: 100%;
-  position: absolute;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-.bannermichis:nth-child(1){
-  left: 0;
-  background-image: url(../assets/wallpapersMICHI001.webp);
-}
-.bannermichis:nth-child(2){
-  right: 0;
-  background-image: url(../assets/wallpapersMICHI002.webp);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5%;
 
 }
-.bannerlogo{
-  position: absolute;
-  width: 25vw;
-  aspect-ratio: 1/1;
+.logo, .noticias, .galeriaapp, .quees, .insta, .descargarapp{
   background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
+
+}
+.logo{
+  width: 100%;
+  height: 35%;
   background-image: url(../assets/logoprograma03.webp);
 }
+.botonesmenu{
+  gap: 20px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
+
+}
+.noticias, .galeriaapp, .quees, .insta, .descargarapp{
+ width: 30vw;             
+  max-width: 150px;        
+  aspect-ratio: 1 / 1; 
+border: 4px dashed #ffffff30;
+border-radius: 10%;
+background-color: #ffffff27;
+}
+
+.noticias{
+  background-image: url(../assets/NOTICIAS01.webp);
+}
+.galeriaapp{
+    background-image: url(../assets/galeriacartasicon.webp);
+}
+.quees{
+  background-image: url(../assets/infoicon.webp);
+}
+.insta{
+  background-image: url(../assets/instaicon.webp);
+}
+.descargarapp{
+  background-image: url(../assets/instaicon.webp);
+}
+  /*-----------------------------Menu app-------------------------------*/
 
 
 /*-------------------------------------------------------------------*/
@@ -883,81 +902,6 @@ margin: 0 auto;
 .carruseldeexpansiones-btn.next {
   right: 10px;
 }
-  /*-----------------------------Menu app-------------------------------*/
-
-.menuapp{
-  width: 100%;
-  height: 100dvh;
-  position: relative;
-display: flex;
-  justify-content: center;
-  align-items: center;
-background-image: url(../assets/wallpapers.webp);
-background-position: center;
-background-size: cover;
-
-}
-
-.contenedor{
-
-  width: 85vw;
-  aspect-ratio: 1/2;
-    display: flex;
-  flex-direction: column;
-    max-width: 400px;
-}
-.logo, .noticias, .galeriaapp, .quees, .insta{
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.logo{
-  width: 100%;
-  height: 50%;
-  background-image: url(../assets/logoprograma03.webp);
-}
-.botonesmenu{
-  gap: 15px;
-  width: 100%;
-  height: 50%;
-  display: flex;
-  flex-direction: column;
-}
-.noticias{
-  background-image: url(../assets/NOTICIAS01.webp);
-  width: 100%;
-  height: 40%;
-}
-.cajaapp{
-    gap: 15px;
-  width: 100%;
-  height: 60%;
-    display: flex;
-  flex-direction: row;
-}
-.galeriaapp{
-    background-image: url(../assets/galeriacartasicon.webp);
-  width: 60%;
-  height: 100%;
-}
-.infoapp{
-  width: 40%;
-  height: 100%;
-      display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-.quees{
-    width: 100%;
-  height: 50%;
-  background-image: url(../assets/infoicon.webp);
-}
-.insta{
-    width: 100%;
-  height: 50%;
-  background-image: url(../assets/instaicon.webp);
-}
-  /*-----------------------------Menu app-------------------------------*/
 
 
 
@@ -970,9 +914,20 @@ background-size: cover;
 
 @media only screen and (max-width: 500px){
 
+.contenedor{
+    gap: 0%;
 
+}
 
+  .botonesmenu{
+  gap: 12px;
 
+}
+
+.noticias, .galeriaapp, .quees, .insta, .descargarapp{
+ width: 35vw;   
+  border: 6px dashed #ffffff30;
+}
 
   .carta-wrapper {
     width: 80px;
