--- a/style/style.css
+++ b/style/style.css
@@ -21,7 +21,7 @@ html, body{
   height: 100dvh;
   margin: 0;
   padding: 0;
-background-image: url(../assets/background001.webp);
+background-image: url(../assets/background002.webp);
 background-size: contain;
 }
 
@@ -109,15 +109,15 @@ background-size: contain;
 
 
 .contenedor{
+  overflow: hidden;
   width: 100%;
   height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 5%;
+    align-items: center;
 
 }
-.logo, .noticias, .galeriaapp, .quees, .insta, .descargarapp{
+ .noticias, .galeriaapp, .quees, .insta, .descargarapp{
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -125,43 +125,58 @@ background-size: contain;
 }
 .logo{
   width: 100%;
-  height: 35%;
-  background-image: url(../assets/logoprograma03.webp);
+  height: 60%;
+  background-image: url(../assets/background_BANNER.webp);
+    background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
+
 .botonesmenu{
-  gap: 20px;
+  padding-top: 3%;
+  gap: 30px;
   width: 100%;
   height: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-
-
 }
-.noticias, .galeriaapp, .quees, .insta, .descargarapp{
- width: 30vw;             
-  max-width: 150px;        
+.galeriaapp, .quees, .insta, .descargarapp{
+ width: 20vw;             
+  max-width: 130px;        
   aspect-ratio: 1 / 1; 
-border: 4px dashed #ffffff30;
+border: 3.5px dashed rgb(126, 126, 126);
 border-radius: 10%;
-background-color: #ffffff27;
+background-color: rgba(255, 255, 255, 0.176);
+box-shadow: 0px 0px 0px 5px rgb(255, 255, 255, 0.176);
+}
+.galeriaapp img:hover, .quees img:hover, .insta img:hover, .descargarapp img:hover{
+  animation: sacudir 0.3s ease;
+  transform: scale(1.1) translateY(-7px) translateX(-10px) rotate(-2deg);
+}
+@keyframes sacudir{
+  0%{
+    transform:  scale(1) translateY(0px);
+  }
+
+    100%{
+    transform:  scale(1.1) translateY(-7px) translateX(-10px) rotate(-2deg);
+  }
 }
 
-.noticias{
-  background-image: url(../assets/NOTICIAS01.webp);
+.descripcionbanner{
+  position:absolute;
+  margin: 0;
+  bottom: 5px;
+  width: 75%;
+  font-size: 0.7rem;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    text-align: center;
+  color: rgb(77, 77, 77);
+
 }
-.galeriaapp{
-    background-image: url(../assets/galeriacartasicon.webp);
-}
-.quees{
-  background-image: url(../assets/infoicon.webp);
-}
-.insta{
-  background-image: url(../assets/instaicon.webp);
-}
-.descargarapp{
-  background-image: url(../assets/instaicon.webp);
-}
+
   /*-----------------------------Menu app-------------------------------*/
 
 
@@ -914,19 +929,19 @@ margin: 0 auto;
 
 @media only screen and (max-width: 500px){
 
-.contenedor{
-    gap: 0%;
+.logo{
+  height: 40%;
 
 }
-
-  .botonesmenu{
-  gap: 12px;
-
+.botonesmenu{
+  padding-top: 20%;
+  justify-content: center;
 }
 
 .noticias, .galeriaapp, .quees, .insta, .descargarapp{
- width: 35vw;   
-  border: 6px dashed #ffffff30;
+ width: 32vw; 
+border-radius: 5%;
+ 
 }
 
   .carta-wrapper {
