--- a/style/style.css
+++ b/style/style.css
@@ -21,8 +21,7 @@ html, body{
   height: 100dvh;
   margin: 0;
   padding: 0;
-background-image: url(../assets/background002.webp);
-background-size: contain;
+background-color: rgb(159, 150, 137);
 }
 
 
@@ -145,10 +144,10 @@ background-size: contain;
  width: 20vw;             
   max-width: 130px;        
   aspect-ratio: 1 / 1; 
-border: 3.5px dashed rgb(126, 126, 126);
+border: 3.5px dashed rgb(159, 150, 137);
 border-radius: 10%;
-background-color: rgba(255, 255, 255, 0.176);
-box-shadow: 0px 0px 0px 5px rgb(255, 255, 255, 0.176);
+background-color: rgb(178, 167, 152);
+box-shadow: 0px 0px 0px 5px rgb(178, 167, 152);
 }
 .galeriaapp img:hover, .quees img:hover, .insta img:hover, .descargarapp img:hover{
   animation: sacudir 0.3s ease;
@@ -344,8 +343,8 @@ transform: scale(1.3);
 }
 
   .cartaejemplo{
+    box-shadow: 0px 0px 0px 5px rgb(255, 255, 255, 0.176);
     cursor: pointer;
-    color: rgb(149, 116, 154);
     filter: saturate(1.2) contrast(1.2);
 border-radius: 3px;
     background-size: cover;
@@ -373,19 +372,21 @@ transform: scale(1.1);
     height: 100%;
 border-radius: 3px;
 background-size: contain;
-  background-image: url(../assets/cartas/BACK.webp);
+border: 3.5px dashed rgb(159, 150, 137);
+background-color: rgb(178, 167, 152);
+box-shadow: 0px 0px 0px 5px rgb(178, 167, 152);
   }
 .overnormal{
-filter: sepia(1) grayscale(1) brightness(0.8);
+
 }
 
 .overraro{
-filter: sepia(1) saturate(5) hue-rotate(240deg) brightness(0.7);
+
 
 }
 
 .overespecial{
-filter: sepia(1) saturate(5) hue-rotate(350deg) brightness(0.7);
+
 }
 
 
