--- a/style/style.css
+++ b/style/style.css
@@ -21,7 +21,7 @@ html, body{
   height: 100dvh;
   margin: 0;
   padding: 0;
-background-color: rgb(159, 150, 137);
+background-image: url(../assets/background001.webp);
 }
 
 
@@ -132,8 +132,8 @@ background-color: rgb(159, 150, 137);
 }
 
 .botonesmenu{
-  padding-top: 3%;
-  gap: 30px;
+  padding-top: 2%;
+  gap: 20px;
   width: 100%;
   height: auto;
   display: flex;
@@ -142,25 +142,12 @@ background-color: rgb(159, 150, 137);
 }
 .galeriaapp, .quees, .insta, .descargarapp{
  width: 20vw;             
-  max-width: 130px;        
+  max-width: 180px;        
   aspect-ratio: 1 / 1; 
-border: 3.5px dashed rgb(159, 150, 137);
-border-radius: 10%;
-background-color: rgb(178, 167, 152);
-box-shadow: 0px 0px 0px 5px rgb(178, 167, 152);
 }
-.galeriaapp img:hover, .quees img:hover, .insta img:hover, .descargarapp img:hover{
-  animation: sacudir 0.3s ease;
-  transform: scale(1.1) translateY(-7px) translateX(-10px) rotate(-2deg);
-}
-@keyframes sacudir{
-  0%{
-    transform:  scale(1) translateY(0px);
-  }
-
-    100%{
-    transform:  scale(1.1) translateY(-7px) translateX(-10px) rotate(-2deg);
-  }
+.galeriaapp:hover, .quees:hover, .insta:hover, .descargarapp:hover{
+  transform: scale(1.1);
+  transition: 0.2s ease-in-out;
 }
 
 .descripcionbanner{
@@ -168,11 +155,11 @@ box-shadow: 0px 0px 0px 5px rgb(178, 167, 152);
   margin: 0;
   bottom: 5px;
   width: 75%;
-  font-size: 0.7rem;
+  font-size: 0.8rem;
     word-wrap: break-word;
     overflow-wrap: break-word;
     text-align: center;
-  color: rgb(77, 77, 77);
+  color: rgb(255, 255, 255);
 
 }
 
@@ -339,11 +326,9 @@ transform: scale(1.3);
   justify-content: center;
   width: 85%;
   height: auto;
-
 }
 
   .cartaejemplo{
-    box-shadow: 0px 0px 0px 5px rgb(255, 255, 255, 0.176);
     cursor: pointer;
     filter: saturate(1.2) contrast(1.2);
 border-radius: 3px;
@@ -352,6 +337,7 @@ border-radius: 3px;
     height: 100%;
     border: none;
     transition: 0.3s ease;
+
 
   }
   .cartaejemplo:hover{
@@ -372,22 +358,21 @@ transform: scale(1.1);
     height: 100%;
 border-radius: 3px;
 background-size: contain;
-border: 3.5px dashed rgb(159, 150, 137);
-background-color: rgb(178, 167, 152);
-box-shadow: 0px 0px 0px 5px rgb(178, 167, 152);
+background-image: url(../assets/cartas/BACK.webp);
   }
 .overnormal{
-
+filter: sepia(1) grayscale(1) brightness(0.5);
 }
 
 .overraro{
-
+filter: sepia(1) saturate(3) hue-rotate(240deg) brightness(0.5);
 
 }
 
 .overespecial{
-
+filter: sepia(1) saturate(3) hue-rotate(350deg) brightness(0.5);
 }
+
 
 
 
@@ -935,12 +920,13 @@ margin: 0 auto;
 
 }
 .botonesmenu{
-  padding-top: 20%;
+  padding-top: 15%;
   justify-content: center;
+  gap: 10px;
 }
 
 .noticias, .galeriaapp, .quees, .insta, .descargarapp{
- width: 32vw; 
+ width: 38vw; 
 border-radius: 5%;
  
 }
