--- a/style/style.css
+++ b/style/style.css
@@ -268,6 +268,21 @@ transform: scale(1.3);
 }
 
 
+
+
+
+@keyframes glowQR {
+  0% { box-shadow: 0 0 0px rgba(255, 255, 0, 0.0); transform: scale(1); }
+  50% { box-shadow: 0 0 50px rgba(255, 255, 0, 0.6); transform: scale(1.03); }
+  100% { box-shadow: 0 0 0px rgba(255, 255, 0, 0.0); transform: scale(1); }
+}
+
+.animacionQR {
+  animation: glowQR 2s ease-in-out;
+  z-index: 9999;
+}
+
+
 /*-------------------------------------------------------------------*/
 
 
