--- a/style/style.css
+++ b/style/style.css
@@ -477,9 +477,9 @@ filter: opacity(0);
 .codigoqrdecarta {
   background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
   display: none;
-  width: 70%;
-  height: 65%;
+
   position: absolute;
   z-index: 999999999999999999999999;
   opacity: 0;
@@ -488,7 +488,8 @@ filter: opacity(0);
   border-radius: 15PX;
   text-align: center;
   padding: 5%;
-    box-shadow: 0px 0px 1px 100px rgba(0, 0, 0, 0.577);
+    box-shadow: 0px 0px 1px 100px rgba(0, 0, 0, 0.579);
+    overflow: hidden;
 
 
 }
@@ -503,8 +504,46 @@ filter: opacity(0);
 
 .sinQRNORMAL{
 background-color:rgb(240, 196, 1);
+  width: 70%;
+  height: 65%;
 
 }
+.QRRARO{
+background-color:rgba(0, 0, 0, 0.545);
+backdrop-filter: BLUR(5PX);
+  width: 100%;
+  height: 100%;
+}
+
+/* HAZ DE LUZ */
+.QRRARO::before {
+  content: "";
+  position: absolute;
+  top: -300%;
+  left: 100%;
+  width: 20px;
+  height: 300%;
+  background: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.745) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  transform: rotate(35deg);
+  animation: hazLuz 0.9s ease-in-out;
+  filter: blur(10PX);
+}
+@keyframes hazLuz {
+  0% {
+    top: -240%;
+    left: 100%;
+  }
+  100% {
+    top: 150%;
+    left: -100%;
+  }
+}
+
 .TEXTOQRALERTA{
   margin: 20PX;
 }
