--- a/style/style.css
+++ b/style/style.css
@@ -546,6 +546,70 @@ pointer-events: none;
   100% { transform: rotate(360deg); }
 }
 
+@keyframes sacudida {
+	0%,
+	100% {
+		transform: rotate(0deg);
+		transform-origin: 50% 100%;
+	}
+
+	10% {
+		transform: rotate(2deg);
+	}
+
+	20%,
+	40%,
+	60% {
+		transform: rotate(-3deg);
+	}
+
+	30%,
+	50%,
+	70% {
+		transform: rotate(3deg);
+	}
+
+	80% {
+		transform: rotate(-2deg);
+	}
+
+	90% {
+		transform: rotate(2deg);
+	}
+}
+
+@keyframes rotacion {
+	0%,
+	100% {
+		transform: rotate(0deg);
+		transform-origin: 50% 0;
+	}
+
+	10% {
+		transform: rotate(4deg);
+	}
+
+	20%,
+	40%,
+	60% {
+		transform: rotate(-8deg);
+	}
+
+	30%,
+	50%,
+	70% {
+		transform: rotate(8deg);
+	}
+
+	80% {
+		transform: rotate(-4deg);
+	}
+
+	90% {
+		transform: rotate(2deg);
+	}
+}
+
 .pantallacargando{
     justify-content: center;
   align-items: center;
