--- a/style/style.css
+++ b/style/style.css
@@ -449,6 +449,7 @@ filter: sepia(1) saturate(3) hue-rotate(350deg) brightness(0.7) ;
 
 
 
+/* --------------------------------------requisitos y alerta de legendarias------------------------------------ */
 
 .overlay-fondo {
   position: fixed;
@@ -476,7 +477,7 @@ filter: sepia(1) saturate(3) hue-rotate(350deg) brightness(0.7) ;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgb(223, 223, 0);
+  background: rgb(240, 196, 1, 1);
   border-radius: 12px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
   font-size: 18px;
@@ -513,7 +514,51 @@ filter: sepia(1) saturate(3) hue-rotate(350deg) brightness(0.7) ;
   backdrop-filter: blur(2px);
   border-radius: 5px;
 }
+.alerta-desbloqueo {
+  height: 50PX;
+  display: flex;
+  position: fixed;
+  top: 5%;
+  right: -300px; /* inicia fuera de pantalla */
+background: linear-gradient(90deg,rgba(240, 196, 1, 1) 80%, rgba(255, 234, 0, 0) 79%);
+  padding: 10px;
+  border-radius: 5px;
+  transition: right 0.5s ease, opacity 0.5s ease;
+  opacity: 0;
+  z-index: 99999999 !important;
+  color: black !important;
+  align-items: center;
+}
 
+.alerta-desbloqueo.visible {
+  right: 0;
+  opacity: 1;
+}
+
+.alerta-desbloqueo .mensaje {
+  color: black !important;
+  font-family: Arial, Helvetica, sans-serif !important;
+  font-weight: bold !important;
+  font-size: 70%;
+  padding-left: 5px;
+  align-items: center;
+}
+
+.alerta-desbloqueo .circulo-imagen {
+  width: 80px;
+  height: 80px;
+  overflow: hidden;
+  flex-shrink: 0;
+}
+
+.alerta-desbloqueo .circulo-imagen img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+/* -------------------------------------------------------------------------- */
 
 #pantallaNegra {
   position: fixed;
