--- a/style/style.css
+++ b/style/style.css
@@ -462,6 +462,7 @@ filter: sepia(1) saturate(3) hue-rotate(350deg) brightness(0.7) ;
   justify-content: center;
   align-items: center;
   z-index: 9998;
+    animation: fadeIn 0.3s ease-in-out;
 }
 
 .cartel-advertencia {
@@ -474,15 +475,13 @@ filter: sepia(1) saturate(3) hue-rotate(350deg) brightness(0.7) ;
   gap: 10PX;
     width: 70%;
   height: auto;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   background: rgb(240, 196, 1, 1);
   border-radius: 12px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
   font-size: 18px;
   z-index: 9999;
   text-align: center;
+    animation: slideDown 0.4s ease-out;
 }
 
 
