--- a/style/style.css
+++ b/style/style.css
@@ -800,7 +800,7 @@ background: radial-gradient(circle,rgba(255, 255, 255, 0) 60%, rgba(20, 176, 122
   }
 
 .carta{
-overflow: hidden;
+overflow: visible;
     filter: saturate(1.2) contrast(1.2);
 }
 
