--- a/style/style.css
+++ b/style/style.css
@@ -520,9 +520,9 @@ filter: sepia(1) saturate(3) hue-rotate(350deg) brightness(0.7) ;
 .mini-overlay {
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.493);
-  backdrop-filter: blur(1px);
-  border-radius: 4px;
+  background: rgb(240, 196, 1);
+  border-radius: 3px;
+border: 3.5px dashed rgb(199, 162, 0);
 }
 .alerta-desbloqueo {
   height: 50PX;
