--- a/style/style.css
+++ b/style/style.css
@@ -520,9 +520,9 @@ filter: sepia(1) saturate(3) hue-rotate(350deg) brightness(0.7) ;
 .mini-overlay {
   position: absolute;
   inset: 0;
-  background: rgb(240, 196, 1);
+  background: rgba(240, 196, 1, 0.64);
   border-radius: 3px;
-border: 3.5px dashed rgb(199, 162, 0);
+border: 3px dashed rgb(158, 129, 0);
 }
 .alerta-desbloqueo {
   height: 50PX;
@@ -1007,15 +1007,59 @@ transform: translateY(50px);
 }
 
 
-
-
-
-
-
-
 .contenedorbotoncerrar{
   display: none;
 }
+
+
+  /*--------------------------------------------------------QUE ES MICHI BOX--------------------------------------------------------------------*/
+
+
+  .contenedorgeneral{
+max-width: 412px;
+height: auto;
+ margin: 0 auto;
+  }
+
+
+.queescontenedor{
+  width: 100%;
+  height: 100dvh;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.bannerquees, .bannerdescripcion{
+  width: 100%;
+
+}
+.bannerquees{
+  background-color: red;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+    height: 40%;
+}
+.bannerdescripcion{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.bannerdescripcion p{
+  padding: 15%;
+  color: white;
+  text-align: center;
+}
+
+
+
+
+
+
+
+
   /*-----------------------------MEDIA--------------------------------*/
   @media only screen and (max-width: 600px){
 
