--- a/style/style.css
+++ b/style/style.css
@@ -1029,6 +1029,7 @@ height: auto;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  align-items: center;
 }
 
 .bannerquees, .bannerdescripcion{
@@ -1036,10 +1037,9 @@ height: auto;
 
 }
 .bannerquees{
-  background-color: red;
   background-position: center;
   background-size: contain;
-  background-repeat: no-repeat;
+background-repeat: no-repeat;
     height: 40%;
 }
 .bannerdescripcion{
@@ -1051,9 +1051,18 @@ height: auto;
   padding: 15%;
   color: white;
   text-align: center;
+
 }
 
-
+.botonavanzar{
+  width: 80px;
+  height: 80px;
+  background-color: rgba(255, 255, 255, 0);
+  border: 1px solid rgba(255, 255, 255, 0);
+  background-image: url(../assets/boton01.webp);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
 
 
 
