--- a/style/style.css
+++ b/style/style.css
@@ -331,34 +331,15 @@ html, body{
 
 
 .descargarapp{
-  position: absolute;
-  flex-direction: row !important;
-display: flex !important;
+display: none;
 width: 300px;
 height: 50px;
 background-color: rgb(1, 162, 1);
 border: 3px solid rgb(21, 255, 0);
-border-radius: 8px;
 top: 8%;
-color: rgb(255, 255, 255);
-box-shadow: 0px 0px 200px 200px rgba(0, 0, 0, 0.458);
-align-items: center;
 
 }
-.descargarbotonfixed p{
-  text-shadow: 0px 0px 10px rgb(255, 255, 255);
-width: 250px;
-}
 
-.descargarbotonfixedimagen{
-  z-index: 99;
-    width: 80px;
-  height: 70px;
-  background-size: contain;
-  background-image: url(../assets/icon-192.png);
-  transform: translateX(10px);
-  background-repeat: no-repeat;
-}
 
 
   /*-----------------------------Menu app-------------------------------*/
