--- a/style/style.css
+++ b/style/style.css
@@ -331,16 +331,13 @@ html, body{
 
 
 .botondescargarapp{
-  position:absolute;
-display: none;
-width: 300px;
-height: 50px;
-background-color: rgb(1, 162, 1);
-border: 3px solid rgb(21, 255, 0);
-top: 8%;
-
+  position: absolute;
+  display: none;
+  width: 300px;
+  height: 50px;
+  background-color: green;
+  top: 6%;
 }
-
 
 
   /*-----------------------------Menu app-------------------------------*/
@@ -1240,7 +1237,7 @@ margin: 0 auto;
   gap: 10px;
 }
 
-.noticias, .galeriaapp, .quees, .insta{
+.noticias, .galeriaapp, .quees, .insta, .descargarapp{
  width: 38vw; 
 border-radius: 5%;
  
