--- a/style/style.css
+++ b/style/style.css
@@ -334,12 +334,27 @@ html, body{
   position: absolute;
   display: none;
   width: 300px;
-  height: 50px;
+  height: 60px;
   background-color: green;
   top: 6%;
+  border: none;
+    animation: slideDown 1s ease-out, fadeIn 0.3s ease-in-out;
 }
 
+.botondescargarapp p{
+font-size: 120%;
+width: 220px;
+pointer-events: none;
+}
+.botondescargarapp img{
+  top: -10px;
+  right: 0;
+position: absolute;
+width: 80px;
+height: 80px;
+pointer-events: none;
 
+}
   /*-----------------------------Menu app-------------------------------*/
 
 
