--- a/style/style.css
+++ b/style/style.css
@@ -339,16 +339,21 @@ html, body{
   top: 6%;
   border: none;
     animation: slideDown 1s ease-out, fadeIn 0.3s ease-in-out;
+    box-shadow: 0px 0px 200px 200px rgba(0, 0, 0, 0.547);
+    border-radius: 8px;
+    border: 3px solid rgb(110, 184, 0);
 }
 
 .botondescargarapp p{
+  color: rgb(255, 255, 255);
+  text-shadow: 0px 0px 15px rgb(4, 255, 0);
 font-size: 120%;
 width: 220px;
 pointer-events: none;
 }
 .botondescargarapp img{
   top: -10px;
-  right: 0;
+  right: -5px;
 position: absolute;
 width: 80px;
 height: 80px;
