--- a/style/style.css
+++ b/style/style.css
@@ -605,15 +605,21 @@ background: linear-gradient(90deg,rgba(240, 196, 1, 1) 80%, rgba(255, 234, 0, 0)
 .alerta-desbloqueo .circulo-imagen {
   width: 80px;
   height: 80px;
-  overflow: hidden;
   flex-shrink: 0;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
 .alerta-desbloqueo .circulo-imagen img {
-  width: 100%;
-  height: 100%;
+  width: 55px;
+  height: 80px;
   object-fit: cover;
   display: block;
+  border-radius: 3px;
+  filter: sepia(1) saturate(3) hue-rotate(350deg) brightness(1) ;
+  box-shadow: 0px 0px 14px 7px rgb(255, 204, 0);
+  transform: rotate(10deg);
 }
 
 /* -------------------------------------------------------------------------- */
@@ -1049,6 +1055,52 @@ transform: translateY(50px);
 
 
 
+
+
+
+  /*--------------------------------------------------------NOTICIAS-------------------------------------------------------------------*/
+
+
+.contenedorQUEESyNOTICIAS{
+   overflow-y: auto;
+  overflow-x: hidden;
+  position: absolute;
+  padding-top: 20%;
+width: 100%;
+height: 90vh;
+ 
+    -webkit-mask-image: linear-gradient(
+    to bottom,
+    rgba(0,0,0,0) 0%,      /* totalmente transparente arriba */
+    rgba(0,0,0,1) 12%,     /* empezar a verse */
+    rgba(0,0,0,1) 88%,     /* visible en el centro */
+    rgba(0,0,0,0) 100%     /* se desvanece abajo */
+  );
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+
+  mask-image: linear-gradient(
+    to bottom,
+    rgba(0,0,0,0) 0%,
+    rgba(0,0,0,1) 12%,
+    rgba(0,0,0,1) 88%,
+    rgba(0,0,0,0) 100%
+  );
+  mask-repeat: no-repeat;
+  mask-size: 100% 100%;
+}
+
+.imagenbannernoticia{
+ width: 100%;
+  height: 300px;
+  background-size: contain;background-repeat: no-repeat;
+  background-position: center;
+}
+
+.contenedorQUEESyNOTICIAS p{
+  padding: 8% 8% 20% 8%;
+  text-align: center;
+}
 
 
 
