--- a/style/style.css
+++ b/style/style.css
@@ -577,7 +577,7 @@ box-shadow: 0px 0px 0px 2px rgb(240, 196, 1, 1) inset;
   display: flex;
   position: fixed;
   top: 5%;
-  right: -300px; /* inicia fuera de pantalla */
+  right: -300px; 
 background: linear-gradient(90deg,rgba(240, 196, 1, 1) 80%, rgba(255, 234, 0, 0) 79%);
   padding: 10px;
   border-radius: 5px;
@@ -620,7 +620,9 @@ background: linear-gradient(90deg,rgba(240, 196, 1, 1) 80%, rgba(255, 234, 0, 0)
   filter: sepia(1) saturate(3) hue-rotate(350deg) brightness(1) ;
   box-shadow: 0px 0px 14px 7px rgb(255, 204, 0);
   transform: rotate(10deg);
+  filter: opacity(0);
 }
+
 
 /* -------------------------------------------------------------------------- */
 
@@ -632,10 +634,10 @@ background: linear-gradient(90deg,rgba(240, 196, 1, 1) 80%, rgba(255, 234, 0, 0)
   height: 100vh;
   background: rgb(0, 0, 0);
   z-index: 9999;
-  display: none; /* por defecto oculto */
+  display: none; 
 }
 #pantallaNegra.activo {
-  display: flex; /* se activa el flex para centrar */
+  display: flex; 
   justify-content: center;
   align-items: center;
 }
@@ -649,7 +651,6 @@ background: linear-gradient(90deg,rgba(240, 196, 1, 1) 80%, rgba(255, 234, 0, 0)
 
 }
 
-/* Animación giro */
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
@@ -924,6 +925,7 @@ overflow: hidden;
 .arriba {z-index: 10;}
 .sombra {z-index: 19;}
 .bordecarta{z-index:14;}
+
 
 .michi{
   background-size: cover;
