--- a/style/style.css
+++ b/style/style.css
@@ -27,12 +27,12 @@ html, body{
 .galeriabackground{
   background-image: url(../assets/background001.webp);
 }
+
 .queesbackground,
 .noticiasbackground{
   background: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(10px); /* efecto blur */
         animation: slideDown 0.8s ease-out, fadeIn 0.5s ease-in-out;
-
 }
 
 #galeriaContainer,
@@ -408,11 +408,6 @@ font-size: 150%;
 border: none;
 background-color: rgba(255, 255, 255, 0);
 transition: 0.3s ease;
-
-}
-.BOTONDESBLOQUEAR button:hover{
-  transition: 0.3s ease;
-transform: scale(1.3);
 }
 
 
@@ -446,7 +441,7 @@ transform: scale(1.3);
 .carousel-container {
   width: 100%;
   height: auto;
-
+  animation: slideDown 0.8s ease-out 1s, fadeIn 0.5s ease-in-out 1s;
   }
   
   .cartasgaleriacontainer{
@@ -474,12 +469,8 @@ border-radius: 3px;
     height: 100%;
     border: none;
     transition: 0.3s ease;
-
-
   }
-  .cartaejemplo:hover{
-transform: scale(1.1);
-  }
+
 
   .carta-wrapper {
         width: 103px;
@@ -730,7 +721,9 @@ background: linear-gradient(90deg,rgba(240, 196, 1, 1) 80%, rgba(255, 234, 0, 0)
   align-items: center;
   width: 100%;
   height: 100dvh;
-  background-color: black;
+  background-color: rgb(92, 26, 126);
+  background-image: url(../assets/background001.webp);
+  background-size: auto;
   position: fixed;
   z-index: 999999999999999999;
   pointer-events: none;
@@ -1133,7 +1126,6 @@ left: 50%;
   padding: 10px;
 margin: 0 auto;
   bottom: 20px;
-
 }
 
 
@@ -1234,11 +1226,6 @@ margin: 0 auto;
 }
 
 
-
-    .cartaejemplo:hover{
-      transform: none;
-        }
-      
 
     }
 
