--- a/style/style.css
+++ b/style/style.css
@@ -381,7 +381,7 @@ position: sticky;
 }
 #codigoGlobal::placeholder {
   border: none;
-  color: rgb(211, 211, 211); 
+  color: rgba(255, 255, 255, 0.895); 
 }
 .BOTONDESBLOQUEAR input{
   outline: none;
@@ -1232,43 +1232,32 @@ margin: 0 auto;
 
 .logo{
   height: 40%;
-  animation: carruselmenuMEDIA 30s ease-in-out infinite, slideDown 0.5s ease-out 7.9s, fadeIn 0.5s ease-in-out 7.9s;
+  animation: carruselmenuMEDIA 20s ease-in-out infinite, slideDown 0.5s ease-out 7.9s, fadeIn 0.5s ease-in-out 7.9s;
 }
 .IMAGENLOGOBANNER{
   display: block;
 }
+
 
 @keyframes carruselmenuMEDIA {
 
     0%{
   background-image: url(../assets/background_BANNER_MEDIA.webp);
   }
-      20%{
+      35%{
   background-image: url(../assets/background_BANNER_MEDIA.webp);
   }
-    25%{
+    40%{
   background-image: url(../assets/background_BANNER_002_MEDIA_002.webp);
   }
-      40%{
+      70%{
   background-image: url(../assets/background_BANNER_002_MEDIA_002.webp);
   }
-      45%{
-  background-image: url(../assets/background_BANNER_004_MEDIA_004.webp);
-  }
-      60%{
-  background-image: url(../assets/background_BANNER_004_MEDIA_004.webp);
-  }
-    65%{
+    75%{
   background-image: url(../assets/background_BANNER_003_MEDIA_003.webp);
-  }
-      75%{
-  background-image: url(../assets/background_BANNER_003_MEDIA_003.webp);
-  }
-     80%{
-  background-image: url(../assets/background_BANNER_005_MEDIA_005.webp);
   }
       95%{
-  background-image: url(../assets/background_BANNER_005_MEDIA_005.webp);
+  background-image: url(../assets/background_BANNER_003_MEDIA_003.webp);
   }
       100%{
   background-image: url(../assets/background_BANNER_MEDIA.webp);
